--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ torchtext = "^0.14.1"
 jupyter = "^1.0.0"
 protobuf = "^3.20"
 sacremoses = "^0.0.53"
+googletrans = "^4.0.0rc1"
 
 
 [build-system]
