--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = ">=3.8,<3.10"
 torch = { url = "https://download.pytorch.org/whl/cu117/torch-1.13.0%2Bcu117-cp39-cp39-win_amd64.whl" }
-spacy = "^3.4.4"
+spacy = {extras = ["cuda117"], version = "^3.5.0"}
 flair = "^0.11.3"
 typer = "*"
 torch-optimizer = "^0.3.0"
@@ -19,6 +19,8 @@ jupyter = "^1.0.0"
 protobuf = "^3.20"
 sacremoses = "^0.0.53"
 deep-translator = "^1.10.1"
+diskcache = "^5.4.0"
+sentence-transformers = "^2.2.2"
 
 
 [build-system]
