--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ protobuf = "^3.20"
 sacremoses = "^0.0.53"
 deep-translator = "^1.10.1"
 diskcache = "^5.4.0"
-sentence-transformers = "^2.2.2"
+google-cloud-translate = "^3.11.0"
 
 
 [build-system]
