--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 python = ">=3.8,<3.10"
 torch = { url = "https://download.pytorch.org/whl/cu117/torch-1.13.0%2Bcu117-cp39-cp39-win_amd64.whl" }
 spacy = {extras = ["cuda117"], version = "^3.5.0"}
-flair = ">=0.12.1"
+flair = "^0.12.1"
 typer = "*"
 torch-optimizer = "^0.3.0"
 madgrad = "^1.2"
@@ -19,6 +19,8 @@ protobuf = "^3.20"
 sacremoses = "^0.0.53"
 deep-translator = "^1.10.1"
 diskcache = "^5.4.0"
+pandas = "^1.5.3"
+nltk = "^3.8.1"
 
 
 [build-system]
