--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,20 +11,19 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = ">=3.8,<3.10"
 torch = { url = "https://download.pytorch.org/whl/cu117/torch-1.13.1%2Bcu117-cp39-cp39-win_amd64.whl" }
-typer = "*"
-torch-optimizer = "*"
-madgrad = "*"
-jupyter = "*"
 protobuf = "^3.20"
 sacremoses = "^0.0.53"
-deep-translator = "*"
-diskcache = "*"
-pandas = "*"
-nltk = "*"
-spacy = "^3.5.2"
-openai = "^0.27.7"
-flair = "^0.12.2"
+#pandas = "*"
+#nltk = "*"
+typer = "^0.9.0"
+madgrad = "^1.3"
+jupyter = "^1.0.0"
+diskcache = "^5.6.1"
+spacy = "^3.6.1"
+openai = "^0.27.8"
+flair = {git = "https://github.com/flairNLP/flair.git"}
 httpx = "^0.24.1"
+deep-translator = "^1.11.4"
 
 
 
