--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ openai = "^0.27.8"
 flair = {git = "https://github.com/flairNLP/flair.git"}
 httpx = "^0.24.1"
 deep-translator = "^1.11.4"
+nltk = "^3.8.1"
 
 
 
